--- a/Projeto 1/style.css
+++ b/Projeto 1/style.css
@@ -6,7 +6,7 @@
 
 
 header{
-    padding: 10px ;
+    padding: 1px ;
     background-color: #737373;
 }
 
@@ -67,7 +67,7 @@ section .container{
     
     max-width: 100%;
     max-height: 600px;
-    margin-right: 32px;
+    margin-right: 10px;
     
 }
 
@@ -106,16 +106,19 @@ h2 {
 
 .social-links li a{
     text-decoration: none;
+    margin-left: 15px;
 }
 
 #contact .container{ 
 
     display: block;
+    margin-top: 30px;
 }
 
 .contact-methods{
     display: flex;
     justify-content: space-between;
+    margin-top: 50px;
 } 
 
 form input,
@@ -125,11 +128,12 @@ form button{
     width: 320px;
     margin-bottom: 8px;
     padding: 2px;
+    font-family: 'Courier New', Courier, monospace;
 }
 
 form textarea{
     resize: none;
-    height: 180px;
+    height: 150px;
 }
 
 section h3 {
@@ -137,21 +141,24 @@ section h3 {
 }
 
 form button {
-    background-color: #182C61;
-    color: #fff;
+    background-color: #7ed809;
+    color: #000000;
     border: none;
     cursor: pointer;
+    font-weight: bolder;
+    font-size: 18px;
 
 
 }
 
 form button:hover{
-    background-color: #314e9e;
+    background-color:  #737373;
+    color: white;
 }
 
 input:focus, textarea:focus {
 
-    outline-color:#182C61 ;
+    outline-color:#000000 ;
 }
 
 footer{
